@startuml

title __RESTAURANTS's Class Diagram__\n

  namespace com.example.foodliveryapp {
    namespace recycler.restaurants {
      class com.example.foodliveryapp.recycler.restaurants.Restaurant {
          - address : String
          - name : String
          - phoneNumber : String
          + Restaurant()
          + getAddress()
          + getName()
          + getPhoneNumber()
          + setAddress()
          + setName()
          + setPhoneNumber()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.restaurants {
      class com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter {
          - context : Context
          - restaurantList : List<Restaurant>
          + RestaurantsListAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.restaurants {
      class com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter.ViewHolder {
          ~ callButton : ImageButton
          ~ navButton : ImageButton
          ~ restaurantNameTextView : TextView
          + ViewHolder()
      }
    }
  }
  

  com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter +-down- com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter.ViewHolder
  com.example.foodliveryapp.recycler.restaurants.RestaurantsListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
